--- a/stackbit.yml
+++ b/stackbit.yml
@@ -372,3 +372,5 @@ models:
         name: section
         label: Section
         options: [Store, About, Home]
+pagesDir: content
+staticDir: static 
