--- a/stackbit.yaml
+++ b/stackbit.yaml
@@ -11,9 +11,11 @@ metadata:
   description: An e-commerce theme powered by Snipcart
   author: Snipcart
   authorURL: 'https://snipcart.com'
-  images:
-    small: images/demo-256x192.png
-    large: images/demo-1024x768.png
+  palettes:
+    blue:
+      images:
+        small: images/demo-256x192.png
+        large: images/demo-1024x768.png
 models:
   config:
     type: config
