--- a/stackbit.yml
+++ b/stackbit.yml
@@ -1,4 +1,4 @@
-stackbitVersion: ~0.2.0
+stackbitVersion: ~0.3.0
 ssgName: unibit
 buildCommand: unibit build
 publishDir: output
@@ -6,6 +6,7 @@ staticDir: static
 uploadDir: images
 dataDir: data
 pagesDir: content
+init_js: js/main.js
 metadata:
   title: Snipcart
   description: An e-commerce theme powered by Snipcart
@@ -19,12 +20,6 @@ models:
       - type: string
         label: Title
         name: title
-      - type: string
-        label: Snipcart JavaScript file URL
-        name: snipcart_js
-      - type: string
-        label: Snipcart CSS file URL
-        name: snipcart_css
       - type: string
         label: Snipcart public API key
         name: snipcart_api_key
@@ -62,7 +57,8 @@ models:
         label: Palettes
         hidden: true
         fields:
-          - type: palette
+          - type: model
+            models: [palette]
             name: default
             label: Default
   palette:
@@ -166,35 +162,35 @@ models:
         label: Title
         name: title
   faq:
-      type: page
-      label: FAQ
-      layout: faq
-      file: faq.md
-      singleInstance: true
-      fields:
-        - type: string
-          name: title
-          label: Title
-        - type: string
-          name: headline
-          label: Headline
-        - type: markdown
-          name: introduction
-          label: Introduction
-        - type: list
-          name: questions
-          label: Questions
-          description: List of questions to show on the FAQ page
-          items:
-            type: object
-            labelField: question
-            fields:
-              - type: string
-                name: question
-                label: Question
-              - type: markdown
-                name: answer
-                label: Answer
+    type: page
+    label: FAQ
+    layout: faq
+    file: faq.md
+    singleInstance: true
+    fields:
+      - type: string
+        name: title
+        label: Title
+      - type: string
+        name: headline
+        label: Headline
+      - type: markdown
+        name: introduction
+        label: Introduction
+      - type: list
+        name: questions
+        label: Questions
+        description: List of questions to show on the FAQ page
+        items:
+          type: object
+          labelField: question
+          fields:
+            - type: string
+              name: question
+              label: Question
+            - type: markdown
+              name: answer
+              label: Answer
   about:
     type: page
     label: About
@@ -235,7 +231,6 @@ models:
                 - type: image
                   name: fallback
                   label: Fallback (JPG or PNG)
-        
   categories:
     type: page
     label: Categories
@@ -253,7 +248,6 @@ models:
         name: section
         label: Section
         options: [Store, About, Home]
-
   promotion:
     type: data
     file: promotion.json
@@ -311,7 +305,6 @@ models:
                 - type: string
                   name: location
                   label: Location
-
   products:
     type: page
     label: Product
