improved hero buttons

--- a/config.yml
+++ b/config.yml
@@ -12,7 +12,7 @@ params:
   bg_image_product: /images/leaf.svg
   snipcart_api_key: ''
   footer_text: 'Copyright 2020 Planty Inc. All rights reserved.'
-  palette: green
+  palette: cyan
   palettes:
     green:
       sass:
