--- a/config.yml
+++ b/config.yml
@@ -2,40 +2,33 @@ baseurl: "/"
 title: 'Planty'
 init_js: js/main.js
 page_load_js: js/page_load.js
+page_unload_js: js/page_unload.js
 params:
   favicon: 'images/favicon.png'
   logo_dark: 'images/logo.svg'
   logo_light: 'images/logo-white.svg'
   hamburger_background_image: /images/leaf-light-grey.svg
   bg_image_primary: /images/header.jpg
+  bg_image_primary_opacity: 60
   bg_image_secondary: /images/leaf-light-grey.svg
   bg_image_product: /images/leaf.svg
   snipcart_api_key: ''
-  footer_text: 'Copyright 2020 Planty Inc. All rights reserved.'
-  palette: default
-  palettes:
-    default:
-      sass:
-        default: '#FFFFFF'
-        light: '#F0F0F0'
-        medium: '#6B797A'
-        dark: '#384647'
-        active: '#88DD9B'
-        active_light: '#C0FDB6'
-        active_medium: '#5C9174'
-        active_dark: '#547567'
-        dark_grey: '#273132'
-        light_grey: '#6B797A'
-        bg_image_cart: /images/leaf-light-grey.svg
+  footer_text: 'Copyright 2021 Planty Inc. All rights reserved.'
+  palette: green
   main_menu:
     - title: Store
       url: /store
+      style: link
     - title: About
       url: /about
+      style: link
     - title: FAQ
       url: /faq
+      style: link
 sass:
   input_file: sass/main.scss.njk
   output_file: assets/css/main.css
   outputStyle: nested
   precision: 10
+templates:
+  body_class: "{{ page.layout }}-template palette-{{ site.params.palette }}"
